--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="stylesheets/screen.css">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui"/>
-    <title>Ernie Batey Winter League 2015/16</title>
+    <title>Ernie Batey Winter League 2015</title>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
@@ -14,16 +14,16 @@
     <h1 ng-click="showFixtures = !showFixtures">Ernie Batey Winter League 2015/16</h1>
 
     <!--
-        <ul>
-        <span class="pickpage">
-        <li value="Table" ng-click="showFixtures = false" ng-class="{selected: showFixtures == false, table: true}">
-            <span class="whichpage">Table</span>
-        </li>
-        <li value="Fixture" ng-click="showFixtures = true" ng-class="{selected: showFixtures == true, results: true}">
-            <span class="whichpage">Results</span>
-        </li>
-        </span>
-    </ul> -->
+    <ul>
+    <span class="pickpage">
+    <li value="Table" ng-click="showFixtures = false" ng-class="{selected: showFixtures == false, table: true}">
+        <span class="whichpage">Table</span>
+    </li>
+    <li value="Fixture" ng-click="showFixtures = true" ng-class="{selected: showFixtures == true, results: true}">
+        <span class="whichpage">Results</span>
+    </li>
+    </span>
+</ul> -->
 </div>
 
 <div id="wrapper">
@@ -51,6 +51,8 @@
                 </tr>
             </table>
 
+            <div class="title">Results</div>
+
             <ul id="resultList">
                 <li class="resultbox" ng-cloak ng-repeat="(key, fixture) in data.fixtures">
                         <span class="timeStamp">
@@ -69,7 +71,8 @@
 
                 <div id="selections">
                     <div>
-                        <select class="form-control Playername" name="home" ng-model="home" required>
+                        <select placeholder="select" class="form-control Playername" name="home" ng-model="home"
+                                required>
                             <option ng-repeat="golfer in data.golfers" value="{{ golfer.name }}">{{ golfer.name}}
                             </option>
                         </select>
@@ -155,8 +158,7 @@
                                 draw: 1
                             }]
                         });
-                    }
-                    else if ($scope.result == 'Beat') {
+                    } else if ($scope.result == 'Beat') {
                         new Firebase(FB_ROOT + '/fixtures/').push({
                             timestamp: new Date().getTime(),
                             result: $scope.home + " beat " + $scope.away,
