--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
     <link rel="stylesheet" href="stylesheets/screen.css">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui"/>
-    <title>Ernie Batey Winter League 2015</title>
+    <title>Ernie Batey Winter League</title>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
 <body ng-app="league" ng-controller="LeagueCtrl">
 
 <div id="headerBar">
-    <h1 ng-click="showFixtures = !showFixtures">Ernie Batey Winter League 2015/16</h1>
+    <h1 ng-click="showFixtures = !showFixtures">Ernie Batey Winter League 2016/17</h1>
 
     <!--
     <ul>
-    <span class="pickpage">
-    <li value="Table" ng-click="showFixtures = false" ng-class="{selected: showFixtures == false, table: true}">
-        <span class="whichpage">Table</span>
-    </li>
-    <li value="Fixture" ng-click="showFixtures = true" ng-class="{selected: showFixtures == true, results: true}">
-        <span class="whichpage">Results</span>
-    </li>
-    </span>
-</ul> -->
+        <span class="pickpage">
+            <li value="Table" ng-click="showFixtures = false" ng-class="{selected: showFixtures == false, table: true}">
+                <span class="whichpage">Table</span>
+            </li>
+            <li value="Fixture" ng-click="showFixtures = true" ng-class="{selected: showFixtures == true, results: true}">
+                <span class="whichpage">Results</span>
+            </li>
+        </span>
+    </ul>
+    -->
 </div>
 
 <div id="wrapper">
